Vite build fix - windicss dynamic classes removed and fixed - wincss classes colors padding and margins added to safelist - 404 route created - translation files are working now in production  - files moved to public/locales - CD - continuous deployment configured

--- a/public/locales/en/translation.yaml
+++ b/public/locales/en/translation.yaml
@@ -11,8 +11,8 @@
   "App Name": "Viterect",
   "Home": "",
   "Cryptocurrencies": "",
-  "Exchanges": "",
   "News": "",
+  "About": "",
   "Settings": "",
   "Notifications": "",
   "Logout": "",
