--- a/public/locales/he/translation.yaml
+++ b/public/locales/he/translation.yaml
@@ -2,7 +2,7 @@
   "Price": "מחיר",
   "Market Cap": "שווי שוק",
   "Daily Change": "שינוי יומי",
-  "Total Cryptocurrencies": "מטבעות וירטואלים",
+  "Total Cryptocurrencies": "סך הכל מטבעות דיגיטלים",
   "Total Exchanges": "החלפות",
   "Total Market Cap": "שווי שוק",
   "Total 24h Volume": "נפח כולל(24שעות)",
@@ -10,15 +10,12 @@
   "Language": "שפה",
   "App Name": "Viterect",
   "Home": "בית",
-  "Cryptocurrencies": "מטבעות וירטואלים",
-  "Exchanges": "בורסה",
+  "Cryptocurrencies": "מטבעות דיגיטלים",
   "News": "חדשות",
+  "About": "אודות",
   "Settings": "הגדרות",
   "Notifications": "התראות",
   "Logout": "התנתק",
-  "Link 1": "",
-  "Link 2": "",
-  "Link 3": "",
   "Theme": "מראה",
   "Global Crypto Stats": "סטטיסטיקה",
   "Top 10 Cryptocurrencies in the world": "10 מטבעות הקריפטו המובילים בעולם",
